--- a/src/components/Modal/Spinner/spinner.scss
+++ b/src/components/Modal/Spinner/spinner.scss
@@ -8,6 +8,10 @@
     z-index: 999;
     background-color:rgba(0,0,0,0.6);
 
+    &.cover-pic {
+      position: absolute;
+      background-color: rgba(255, 255, 255, 0.6);
+    }
   .lds-facebook {
     display: inline-block;
     position: relative;
