--- a/src/components/Share/share.scss
+++ b/src/components/Share/share.scss
@@ -32,7 +32,7 @@
           width: 100%;
           height: 100%;
         }
-         @include hoverAvatar;
+         @include hover-light-gray($borderRadius:50%);
       }
       &__search {
         flex: 1;
